--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lenis": "^1.1.14",
     "lucide-react": "^0.445.0",
     "next": "^14.2.13",
+    "next-themes": "^0.4.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
